overlapping icons fix

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -203,6 +203,9 @@
 		opacity: 0.75;
 		z-index: 3;
 	}
+	&:hover:not(.disabled) {
+		z-index: 15;
+	}
 	&.disabled {
 		cursor: none;
 	}
